--- a/templates/jobItems.html
+++ b/templates/jobItems.html
@@ -7,6 +7,6 @@
     {% endif %}
   </div>
   <div class="col-2 text-right">
-    <button type="button" class="btn btn-outline-primary align-middle">Apply</button>
+    <a href="mailto:hello@jovian.ai?subject=Application%20for%20{{job['title']}}&body=My%20name%3A%20%3Cyour%20name%20here%3E%0D%0A%0D%0AMy%20resume%20link%3A%20%3Cresume%20link%3E%0D%0A%0D%0AMy%20LinkedIn%20Profile%3A%20%3Clink%20here%3E"type="button" class="btn btn-outline-primary align-middle">Apply</a>
   </div>
 </div>
